--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
-  "name": "comp392-finalproject",
+  "name": "comp392-Assignment-03",
   "authors": [
     "Mohammed Ahmed, Ryan Sterling, Joshua Collaco"
   ],
-  "description": "COMP392 Final Project",
+  "description": "COMP392 Assignment 03",
   "main": "",
   "moduleType": [],
   "license": "MIT",
-  "homepage": "https://github.com/300833356COMP392/FinalProject",
+  "homepage": "https://github.com/ryans3/Comp392Assignment03",
   "ignore": [
     "**/.*",
     "node_modules",
